--- a/views/politica.html
+++ b/views/politica.html
@@ -27,14 +27,18 @@
             margin-bottom: 2%;
         }
         main a{
-        display: block;
-        color: rgb(32, 115, 223);
-        font-size: 20px;
-        margin: auto;
-        text-align: center;
-        margin-top: 5%;
-        text-decoration: none;
+            display: block;
+            color: rgb(32, 115, 223);
+            font-size: 20px;
+            margin: auto;
+            text-align: center;
+            margin-top: 5%;
+            text-decoration: none;
+            transition: 0.3s ease-in-out;
         }
+        main a:hover{
+            color: rgb(51, 255, 63);
+            transition: 0.3s ease-in-out
     </style>
 </head>
 <body>
