--- a/views/contacto.html
+++ b/views/contacto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="caja-politica" class="caja-politica">
-        <p>Este sitio recopila datos según nuestra <a href="views/politica.html" target="_blank">Política de Privacidad</a>.  
+        <p>Este sitio recopila datos según nuestra <a href="../views/politica.html" target="_blank">Política de Privacidad</a>.  
             Por favor, acéptala para continuar.
         </p>
         <label class="checkbox-contenedor">
